# EGO_face_tracker

./: .gitignore  README.md  publisher.py  subscriber.py
face_recognition/: CMakeLists.txt
face_recognition/src/: face_recognition.py  tracker.py
face_recognition/src/launch/: example_venv.launch
face_tracker_package/: package.xml
face_tracker_package/src/: tracker.py
face_tracker_package/src/launch/: face_tracker_package.launch
misc/: publisher.py
